--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
+    "@reduxjs/toolkit": "^2.4.0",
     "chart.js": "^4.4.7",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "sass": "^1.81.0"
   },
